--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,10 @@
-@import 'reset';
+// @import 'reset';
 @import 'variables';
 @import 'mixin';
 
-
+body{
+    font-family: sans-serif;
+}
+.photoReal{
+    
+}
