--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,7 +4,40 @@
 
 body{
     font-family: sans-serif;
+    background: url(../images/salleCinema2.jpg) no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    scroll-behavior: smooth;
+
+    .container{
+        background-color: rgba(255,255,255,0.6);
+    }
 }
-.photoReal{
-    
+
+
+
+/* ----------------------- HEADER ----------------------- */
+
+
+/* ----------------------- HOME VIEW ----------------------- */
+div{
+    &#main{
+        
+        div{
+            &.container {
+            // padding-top: 5%;
+            // padding-bottom: 5%;
+            .card{
+                &.m-2 {
+                    height: 426.78px;
+                }
+                .card-title {
+                font-size: 1rem;
+                } 
+            }
+            }
+        }
+    }
 }
+
