--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,7 +10,7 @@ body{
     background-attachment: fixed;
     scroll-behavior: smooth;
 
-    .container{
+    .fondgris{
         background-color: rgba(255,255,255,0.6);
     }
 }
@@ -18,7 +18,11 @@ body{
 
 
 /* ----------------------- HEADER ----------------------- */
-
+header {
+    nav {
+        
+    }
+}
 
 /* ----------------------- HOME VIEW ----------------------- */
 div{
@@ -31,6 +35,7 @@ div{
             .card{
                 &.m-2 {
                     height: 426.78px;
+                    border: none;
                 }
                 .card-title {
                 font-size: 1rem;
