--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,1 +1,18 @@
-body{font-family:sans-serif;background:url(../images/salleCinema2.jpg) no-repeat;background-size:cover;background-position:center;background-attachment:fixed;scroll-behavior:smooth}body .container{background-color:rgba(255,255,255,0.6)}div#main div.container .card.m-2{height:426.78px}div#main div.container .card .card-title{font-size:1rem}
+body {
+  font-family: sans-serif;
+  background: url(../images/salleCinema2.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  scroll-behavior: smooth; }
+  body .container {
+    background-color: rgba(255, 255, 255, 0.6); }
+
+/* ----------------------- HEADER ----------------------- */
+/* ----------------------- HOME VIEW ----------------------- */
+div#main div.container .card.m-2 {
+  height: 426.78px; }
+div#main div.container .card .card-title {
+  font-size: 1rem; }
+
+/*# sourceMappingURL=style.css.map */
