--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,7 +9,6 @@ body{
     background-position: center;
     background-attachment: fixed;
     scroll-behavior: smooth;
-
     .fondgris{
         background-color: rgba(255,255,255,0.6);
     }
@@ -46,3 +45,6 @@ div{
     }
 }
 
+.connexion{
+    background-color: blue;
+}
