--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -1,2 +1,2 @@
-body{font-family:sans-serif;background:url(../images/salleCinema2.jpg) no-repeat;background-size:cover;background-position:center;background-attachment:fixed;scroll-behavior:smooth}body .fondgris{background-color:rgba(255,255,255,0.6)}div#main div.container .card.m-2{height:426.78px;border:none}div#main div.container .card .card-title{font-size:1rem}
+body{font-family:sans-serif;background:url(../images/salleCinema2.jpg) no-repeat;background-size:cover;background-position:center;background-attachment:fixed;scroll-behavior:smooth}body .fondgris{background-color:rgba(255,255,255,0.6)}div#main div.container .card.m-2{height:426.78px;border:none}div#main div.container .card .card-title{font-size:1rem}.connexion{background-color:blue}
 /*# sourceMappingURL=style.css.map */
